Reorganized structure of base.ecf

Sat 23rd Dec 2023, 15:35:11
Tried caching block_offset in EL_COMPACT_SUBSTRINGS_32

Sun 31st Dec 2023, 15:00:27
Management of application versions in path list

Tue 9th Jan 2024, 16:25:24
Cairo interface to Glib with GError handling

Sun 28th Jan 2024, 18:28:55
Change to note class link place holder notation

Mon 19th Feb 2024, 18:29:59
Refactored caching of hosted Paypal button information

Fri 23rd Feb 2024, 17:37:51
EL_TIME_DATE_I now uses EL_SYSTEM time for updates

Sat 16th Mar 2024, 12:45:20
Split ZSTRING_TEST_SET into smaller tests

Wed 3rd Apr 2024, 14:42:20
Refactor of EL_ZSTRING to use STRING_32.area

Fri 19th Apr 2024, 8:22:04
Refactoring ZSTRING and many string routines

Sun 21st Apr 2024, 8:54:53
Optimized ZSTRING.to_string_32

Fri 17th May 2024, 13:42:19
FTP adapted for Fasthosts Prosite

Sat 1st Jun 2024, 14:03:03
Eiffel publisher now replaces/update DEVELOPER_CLASS_LINK instances

Sat 1st Jun 2024, 14:04:59
Eiffel publisher DEVELOPER_CLASS_LINK now removeable and updateable

Sun 9th Jun 2024, 9:53:35
Eiffel Viewer synchronizes perfectly with better client examples

Wed 12th Jun 2024, 16:33:01
Eiffel Viewer routine distribution stats

Sat 22nd Jun 2024, 15:40:00
Use ZSTRING (""), not new_zstring, class to compile language code set from Pyxis

Tue 2nd Jul 2024, 9:41:50
Fixed issue of localized shortcut comment with double +

Wed 10th Jul 2024, 11:18:25
Test set for EL_WEB_LOG_ENTRY

Sat 13th Jul 2024, 16:20:11
EL_STRING_LIST has routine unique_sort

Mon 15th Jul 2024, 17:36:58
Excess log pruning command

Thu 18th Jul 2024, 17:13:53
Memory efficient string history; global Key_language

Fri 19th Jul 2024, 13:48:49
Fully tested EL_TEXT_EDITION_HISTORY for better undo/redo

Sun 21st Jul 2024, 15:09:12
New class EL_TABLE_INTERVAL_MAP_LIST

Tue 23rd Jul 2024, 15:45:49
EL_REFLECTIVE_STRING_TABLE is new and EL_CASE.Sentence is new

Thu 25th Jul 2024, 19:38:19
Completion of EL_TRANSLATION_TABLE for Pyxis and XML
